# canmatik

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  SAFETY.md  build32.bat  build_output.txt  install_fake_j2534.bat  uninstall_fake_j2534.bat
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
docs/: adapter-compatibility.md  j2534-notes.md  log-format-spec.md  obd-diagnostics.md  safety-notice.md  user-guide.md
installer/: canmatik.iss
samples/: README.md
samples/captures/: idle_500kbps.asc  idle_500kbps.jsonl
samples/captures/ducati_937/: obd.asc
samples/captures/mazda_mx5_nc_2.0/: obd.asc
samples/configs/: default.json  mock_ecu_faulty.yaml  mock_ecu_generic.yaml  obd_default.yaml  obd_engine_only.yaml  obd_fuel_economy.yaml
specs/001-can-bus-scanner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-can-bus-scanner/checklists/: requirements.md
specs/001-can-bus-scanner/contracts/: cli-commands.md
specs/002-obd-diagnostics/: data-model.md  plan.md  spec.md  tasks.md
specs/003-gui-analyzer/: data-model.md  plan.md  spec.md  tasks.md
src/: main.cpp
src/cli/: canmatik.rc  cli_app.cpp  cli_app.h  cmd_demo.cpp  cmd_elm327.cpp  cmd_label.cpp  cmd_monitor.cpp  cmd_obd.cpp  cmd_record.cpp  cmd_replay.cpp  cmd_scan.cpp  cmd_sniff.cpp  cmd_status.cpp  formatters.h  main.cpp  provider_select.h
src/config/: config.cpp  config.h
src/core/: can_frame.cpp  can_frame.h  capture_sink.h  filter.cpp  filter.h  label_store.cpp  label_store.h  log_macros.h  result.h  session_status.cpp  session_status.h  timestamp.h
src/fake_j2534/: fake_j2534.cpp  fake_j2534.def
src/gui/: canmatik_gui.rc  frame_collector.cpp  frame_collector.h  gui_app.cpp  gui_app.h  gui_log_sink.h  gui_main.cpp  gui_settings.cpp  gui_settings.h  gui_state.h
src/gui/controllers/: capture_controller.cpp  capture_controller.h  obd_controller.cpp  obd_controller.h  replay_controller.cpp  replay_controller.h
src/gui/panels/: can_messages_panel.cpp  can_messages_panel.h  dtc_panel.cpp  dtc_panel.h  logs_panel.cpp  logs_panel.h  menu_bar.cpp  menu_bar.h  obd_data_panel.cpp  obd_data_panel.h  settings_panel.cpp  settings_panel.h  sniff_panel.cpp  sniff_panel.h  status_bar.cpp  status_bar.h  watchdog_panel.cpp  watchdog_panel.h
src/gui/widgets/: playback_toolbar.cpp  playback_toolbar.h
src/logging/: asc_reader.cpp  asc_reader.h  asc_writer.cpp  asc_writer.h  jsonl_reader.cpp  jsonl_reader.h  jsonl_writer.cpp  jsonl_writer.h  log_reader.h  log_writer.h
src/mock/: mock_channel.cpp  mock_channel.h  mock_provider.cpp  mock_provider.h  scriptable_mock_channel.cpp  scriptable_mock_channel.h  scriptable_mock_provider.cpp  scriptable_mock_provider.h
src/obd/: dtc_decoder.cpp  dtc_decoder.h  interval_spec.cpp  interval_spec.h  iso15765.h  obd_config.cpp  obd_config.h  obd_request.h  obd_response.cpp  obd_response.h  obd_session.cpp  obd_session.h  pid_decoder.cpp  pid_decoder.h  pid_table.cpp  pid_table.h  query_scheduler.cpp  query_scheduler.h
src/platform/win32/: j2534_channel.cpp  j2534_channel.h  j2534_defs.h  j2534_dll_loader.cpp  j2534_dll_loader.h  j2534_provider.cpp  j2534_provider.h  registry_scanner.cpp  registry_scanner.h  serial_channel.cpp  serial_channel.h  serial_provider.cpp  serial_provider.h
src/proxy/: proxy_protocol.h  proxy_registry.cpp  proxy_registry.h  proxy_server.cpp  proxy_server.h
src/services/: capture_service.cpp  capture_service.h  elm327_bridge.cpp  elm327_bridge.h  global_capture.cpp  global_capture.h  record_service.cpp  record_service.h  replay_service.cpp  replay_service.h  session_service.cpp  session_service.h
src/transport/: channel.h  device_info.h  device_provider.h  transport_error.h
tests/: CMakeLists.txt
tests/integration/: test_capture_performance.cpp  test_cli_commands.cpp  test_edge_cases.cpp  test_mock_capture.cpp  test_obd_session.cpp  test_record_replay.cpp  test_replay_performance.cpp
tests/unit/: test_asc_reader.cpp  test_asc_writer.cpp  test_can_frame.cpp  test_config.cpp  test_dtc_decoder.cpp  test_filter.cpp  test_frame_collector.cpp  test_gui_settings.cpp  test_interval_spec.cpp  test_jsonl_reader.cpp  test_jsonl_writer.cpp  test_label_store.cpp  test_obd_config.cpp  test_obd_request.cpp  test_obd_response.cpp  test_pid_decoder.cpp  test_pid_table.cpp  test_query_scheduler.cpp  test_replay_controller.cpp  test_session_status.cpp  test_timestamp.cpp
